--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
