--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "clsx": "^2.1.1",
+    "i18next": "^25.6.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "simplex-noise": "^4.0.3",
