--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
