--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@vercel/analytics": "^1.6.1",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "i18next": "^25.6.3",
