fix(-): generate .map files after build

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,23 @@
   ],
   "headers": [
     {
+      "source": "/assets/:path*.map",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
